added instructions to test airflow.

--- a/airflow/playbook.yml
+++ b/airflow/playbook.yml
@@ -69,4 +69,5 @@
 
 
 #### one liner
-# ansible-playbook -K ansible-cwl/toil/playbook.yml && cd ~/toil_test && source bin/activate && toil-cwl-runner example.cwl example-job.yaml && deactivate
+
+ansible-playbook -K ansible-cwl/airflow/playbook.yml && cd ~/airflow_test && source bin/activate && cwl-airflow init && (airflow scheduler &> /dev/null &) && (airflow webserver&> /dev/null &) && cwl-airflow submit example.cwl example-job.yaml
