--- a/reana/play_test.yml
+++ b/reana/play_test.yml
@@ -8,7 +8,7 @@
 
   - name: kubernetes.repo
     copy:
-      dest: etc/yum.repos.d/kubernetes.repo
+      dest: /etc/yum.repos.d/kubernetes.repo
       content: |
         [kubernetes]
         name=Kubernetes
@@ -17,6 +17,9 @@
         gpgcheck=1
         repo_gpgcheck=1
         gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
+    become: yes
+    become_user: root
+    become_method: su
 
 
   - name: Install reana dependencies
