Added become to group add script.

--- a/reana/play_test.yml
+++ b/reana/play_test.yml
@@ -34,6 +34,10 @@
       user: longr
       groups: libvirt
       append: yes
+    become: yes
+    become_user: root
+    become_method: su
+    
 
 
   - name: Install reana dependencies
