--- a/galaxy/roles/galaxy/tasks/main.yml
+++ b/galaxy/roles/galaxy/tasks/main.yml
@@ -57,8 +57,8 @@
 
 - name: Copy galaxy configs
   synchronize:
-    src: app
-    dest: /app
+    src: app/
+    dest: /app/.
   become: yes
   become_user: root
   become_method: su
