--- a/roles/reana/tasks/main.yml
+++ b/roles/reana/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
 # Main file for REANA role.
 
-import_tasks: install_kubernetes.yml
-import_tasks: install_reana.yml
+- import_tasks: install_kubernetes.yml
+- import_tasks: install_reana.yml
