--- a/roles/reana/tasks/install_kubernetes.yml
+++ b/roles/reana/tasks/install_kubernetes.yml
@@ -18,8 +18,8 @@
     name: ['qemu-kvm', 'libvirt', 'libvirt-daemon-kvm']
     state: present
   become: yes
-  #become_user: root
-  #become_method: su
+  become_user: root
+  become_method: su
 
 
 # Add user to libvirtd group
@@ -30,6 +30,9 @@
     groups: libvirt
     append: yes
   become: yes
+  become_user: root
+  become_method: su
+  
 
 # Install kubernetes repository
 
@@ -45,6 +48,8 @@
       repo_gpgcheck=0
       gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
   become: yes
+  become_user: root
+  become_method: su
 
 
 # Get Docker Driver for kubernetes
@@ -54,6 +59,8 @@
     url: "https://github.com/kubernetes/minikube/releases/download/v1.2.0/docker-machine-driver-kvm2"
     dest: "/usr/local/bin/docker-machine-driver-kvm2"
   become: yes
+  become_user: root
+  become_method: su
 
 
 # Correct permissions for minikube driver
@@ -63,6 +70,8 @@
     dest: "/usr/local/bin/docker-machine-driver-kvm2"
     mode: 0755
   become: yes
+  become_user: root
+  become_method: su
 
 
 # Install kubectl
@@ -72,6 +81,8 @@
     name: kubectl
     state: present
   become: yes
+  become_user: root
+  become_method: su
 
 
 # Get Minikube
@@ -81,6 +92,8 @@
     url: "https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64"
     dest: "/usr/local/bin/minikube"
   become: yes
+  become_user: root
+  become_method: su
 
 
 # Correct permissions for minikube
@@ -90,18 +103,21 @@
     dest: "/usr/local/bin/minikube"
     mode: 0755
   become: yes
+  become_user: root
+  become_method: su
 
 
 # Install helm
 
 - name: Install helm
   unarchive:
-    remote_src: yes
     src: "https://storage.googleapis.com/kubernetes-helm/helm-v2.12.2-linux-amd64.tar.gz"
     dest: "/usr/local/bin/"
     extra_opts: "linux-amd64/helm"
-  remote_src: yes
+    remote_src: yes
   become: yes
+  become_user: root
+  become_method: su
 
 
 # Correct permissions for helm
@@ -111,11 +127,14 @@
     src: /usr/local/bin/linux-amd64/helm
     dest: /usr/local/bin/helm
     mode: '0755'
+    remote_src: yes
   become: yes
+  become_user: root
+  become_method: su
 
 
 # Start minikube
 
 - name: start minikube cluster
-  command: minikube start --feature-gates="TTLAfterFinished=true" --vm-driver kvm2
+  command: minikube start --feature-gates="TTLAfterFinished=true" --vm-driver kvm2 --cpus 4 --memory 4096
   #become: yes
